alignment fixed

--- a/style.css
+++ b/style.css
@@ -48,7 +48,12 @@ header-nav a:first-of-type {
     width: 100%;
 }
 
-.heading-section h1 {
+.heading-section .interior {
+    border: none;
+    padding: 0px;
+}
+
+.heading-section .interior h1 {
     color: #6C0468;
     font-size: 64px;
     font-weight: 700;
@@ -56,7 +61,7 @@ header-nav a:first-of-type {
     margin-bottom: 20px;
 }
 
-.heading-section h2 {
+.heading-section .interior h2 {
     color: #6C0468;
     font-size: 40px;
     font-weight: 700;
@@ -72,7 +77,7 @@ header-nav a:first-of-type {
     margin-bottom: 25px;     
 }
 
-.heading-section h4 {
+.heading-section .interior h4 {
     color: #6C0468;
     font-size: 36px;
     font-weight: 700;
@@ -80,7 +85,7 @@ header-nav a:first-of-type {
     margin-bottom: 25px;     
 }
 
-.heading-section p {
+.heading-section .interior p {
     color: #6C0468;
     font-size: 20px;
     font-weight: 700;
@@ -142,6 +147,7 @@ section.box-model-section {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    padding: 0px;
 }
 
 .interior-flex > div {
@@ -265,15 +271,18 @@ section.box-model-section {
 
 .footer-section {
     background-color: #FFC3C3;
-    margin: 0;
-    padding: 15px;
     position: absolute;
-    width: 1280px;
+    width: 100%;
+}
+
+.footer-section .interior {
+    border: none;
+    width: 100%;
+    padding: 25px;
 }
 
 .footer-section p {
     font-weight: 700;
     font-size: 18px;
     line-height: 28px;
-    margin-left: 35px; 
 }
